0.9.8
 * require data= argument when using formula interface
 * turn off hessian computation in profile
 * allow use of MASS::ginv

0.9.7
 * bug fix in calc_mle2_function for no-intercept models
  (thanks to Colin Kremer)
 * fixed optimx, added 'user' option

0.9.6
 * changed hessian calculation to use numDeriv code (causes tiny
changes to hessian results that could matter in edge cases)
  too lazy to provide a backward compatibility mode ...
 * documented optimizer= choices in ?mle2

0.9.5.1
 * fixed bug in AICc (David Harris)


0.9.5 

  too many changes!
 * added NAMESPACE, various fixes to go with that
 * beginnings of an RUnit testing framework
 * tweaked vignette
 * added prof.lower, prof.upper to profile()
 * added "optimize" to list of allowed optimizers, some
   bug fixes

0.9.4.1

 * tweaked par() resetting in profile plots

0.9.4

 * more qAICc fixing

0.9.3 (version bump from previous) 18/09/2009

* tweaked handling of bounds: profile now succeeds
  on some 1D problems where it didn't before

15/08/2009

* added deviance, residuals methods
* added newparams argument to predict, simulate;
   newdata argument to simulate
* added vignette (stub)
* added explicit params argument, to help sort out
  full parameter specifications when parameters is
  non-NULL

0.9.2 10/08/2009
* fixed predict() for case with parameters
* added snorm
* changed ICtab defaults to weight=TRUE, base=FALSE, sort=TRUE

0.9.1 
  added simulate method (formula interface only)
  fix AICctab bug
  remove spurious cat/print in profile
  fix qAIC bug

0.9.0 26/08/2008
*  fix Tom Hobbs bug: named lower/upper/parscale/ndeps
get rearranged properly, otherwise rearrange in order
of "start" and issue a warning
* documentation tweak for S4 as.data.frame
* added sbeta to list of known distributions
* removed nlme requirement & auto-loading

0.8.9 04/08/2008
* version bump, submit to CRAN
* added predict method

0.8.8  10/07/2008
* added flexibility for profile plotting (main, x labels etc.);